tests/expectations/compiler/function/unknown_parameter_type_fail.out
Error [ETYC0372017]: The type `test.aleo/Foo` is not found in the current scope.
    --> compiler-test:3:28
     |
   3 |     transition main(a: u8, foo: Foo) -> u8 {
     |                            ^^^^^^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo/credits` instead of `credits`
Error [ETYC0372017]: The type `test.aleo/Foo` is not found in the current scope.
    --> compiler-test:7:38
     |
   7 |     transition returns_foo(a: u8) -> Foo {
     |                                      ^^^
     |
     = If you are using an external type, make sure to preface with the program name. Ex: `credits.aleo/credits` instead of `credits`
Error [ETYC0372117]: Expected type `test.aleo/Foo` but type `u8` was found.
    --> compiler-test:8:16
     |
   8 |         return a;
     |                ^
